syntax = "proto3";

option java_multiple_files = true;
option java_package = "euller.mercado_livre.server.cliente";
option java_outer_classname = "ClienteServerProto";
option objc_class_prefix = "HLW";

package server.client;

service PedidoService {
  rpc criarPedido(CriarPedidoRequest) returns (CriarPedidoResponse);
  rpc modificarPedido(ModificarPedidoRequest) returns (ModificarPedidoResponse);
  rpc buscarPedido(BuscarPedidoRequest) returns (BuscarPedidoResponse);
  rpc buscarPedidos(BuscarPedidosRequest) returns (BuscarPedidosResponse);
  rpc apagarPedido(ApagarPedidoRequest) returns (ApagarPedidoResponse);
}

message CriarPedidoRequest { string CID = 1; string dados = 2; }
message CriarPedidoResponse { string message = 1; }
message ModificarPedidoRequest { string CID = 1; string OID = 2; string dados = 3; }
message ModificarPedidoResponse { string message = 1; }
message BuscarPedidoRequest { string CID = 1; string OID = 2; }
message BuscarPedidoResponse { string message = 1; }
message BuscarPedidosRequest { string CID = 1; }
message BuscarPedidosResponse { string message = 1; }
message ApagarPedidoRequest { string CID = 1; string OID = 2; }
message ApagarPedidoResponse { string message = 1; }

service ClienteService {
  rpc verificarSeClienteExiste(VerificarSeClienteExisteRequest) returns (VerificarSeClienteExisteResponse);
}

message VerificarSeClienteExisteRequest { string CID = 1; }
message VerificarSeClienteExisteResponse { string message = 1; }

service ProdutoService {
  rpc buscarProduto(BuscarProdutoRequest) returns (BuscarProdutoResponse);
  rpc modificarProduto(ModificarProdutoRequest) returns (ModificarProdutoResponse);
}

message BuscarProdutoRequest { string PID = 1; }
message BuscarProdutoResponse { string message = 1; }
message ModificarProdutoRequest { string PID = 1; string dados = 2; }
message ModificarProdutoResponse { string message = 1; }

